--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
         <!-- main section -->
         <div class="content flex justify-between items-center w-full">
             <div class="w-[20%] relative group m-auto">
-                <img class="scale-[1.2] relative group-hover:-translate-x-[33%] -translate-x-[20%] translate-y-[114%] group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
-                    src="star/Cartoons/Cartoon peach center.svg" alt="">
-                <img class="absolute z-[9] group-hover:-translate-x-[50%] -translate-x-[7%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
-                    src="star/Cartoons/Cartoon peach right left.svg" alt="">
-                <img class="absolute z-[9] group-hover:-translate-x-[50%] -translate-x-[70%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
-                    src="star/Cartoons/Cartoon peach right left.svg" alt="">
+                <img class="boxImage scale-[1.2] w-[80%] relative group-hover:-translate-x-[40%] -translate-x-[50%] translate-y-[50%] group-hover:translate-y-[50%] group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
+                    src="star/Cartoons/8.png" alt="">
+                <img class="boxImage absolute z-[9] w-[80%] group-hover:-translate-x-[50%] -translate-x-[27%] -translate-y-[70%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
+                    src="star/Cartoons/8.png" alt="">
+                <img class="boxImage absolute z-[9] w-[80%] group-hover:-translate-x-[50%] -translate-x-[100%] -translate-y-[70%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
+                    src="star/Cartoons/8.png" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
                 <img class="drinkImage w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out group-hover:shadow-none"
@@ -114,7 +114,7 @@
                     <div class="border-b border-[#D35910] flex justify-center">
                     <div class="group relative w-20" >
                     <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                        onclick="changeText('Orange'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]')"
+                        onclick="changeText('Orange'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('star/Cartoons/8.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]')"
                         src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
                     <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
@@ -124,7 +124,7 @@
                     </div>
                     <div class="group relative w-20">
                     <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                        onclick="changeText('Apple'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#94D12B]')" src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
+                        onclick="changeText('Apple'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('star/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#94D12B]')" src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
                     <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
                     <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
