--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             class="overflow-x-auto z-10 h-full absolute px-1 md:px-4 flex flex-col justify-between transition duration-300">
             <div class="m-auto overflow-x-hidden h-[40%] lg:h-[70%] sb">
                 <ul class="tracking-wide leading-5 text-sm font-normal">
-                    <li class="">
+                    <li class="" onclick="sections1(); showSection('orange');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
-                    <li class="">
+                    <li class="" onclick="sections1(); showSection('apple');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                     <li class="">
@@ -67,7 +67,48 @@
         </aside>
         <!-- nav bar/ -->
         <!-- main section -->
-        <div class="content flex justify-between items-center w-full">
+        <div class="content flex justify-between items-center w-full section1 orange">
+            <div class="w-[20%] relative group m-auto">
+                <img class="boxImage scale-[1.2] w-[80%] relative group-hover:-translate-x-[40%] -translate-x-[50%] translate-y-[50%] group-hover:translate-y-[50%] group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
+                    src="star/Cartoons/8.png" alt="">
+                <img class="boxImage absolute z-[9] w-[80%] group-hover:-translate-x-[50%] -translate-x-[27%] -translate-y-[70%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
+                    src="star/Cartoons/8.png" alt="">
+                <img class="boxImage absolute z-[9] w-[80%] group-hover:-translate-x-[50%] -translate-x-[100%] -translate-y-[70%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
+                    src="star/Cartoons/8.png" alt="">
+            </div>
+            <div class="image w-[40%] group flex justify-center">
+                <img class="drinkImage w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out group-hover:shadow-none"
+                    src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                <img class="liquidImage absolute w-0 group-hover:w-[20%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
+                    src="star\orange/orange-juice-splash.svg" alt="">
+                <img class="fruitImage absolute z-[8] w-0 group-hover:w-[15%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
+                    src="star\orange\orange-poster.svg" alt="">
+                <img class="sliceImage absolute w-0 group-hover:w-[15%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
+                    src="star\orange/orange-ingredients-10.svg" alt="">
+                <img class="drinkImage absolute w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
+                    src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                <img class="drinkImage absolute w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
+                    src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+            </div>
+            <div dir="ltr" class="text text-white w-[20%] m-auto">
+                <img class="logoImage" src="star/LOGO/frizbi logo with bg.svg" alt="">
+                <h2 id="fruit-text" class="text-base uppercase">Orange</h2>
+                <p class="text-[6px] lg:text-sm lg:mb-3">
+                    You might be looking at this Slider Revolution template and wondering how the heck you’re going to
+                    repurpose it for your
+                    needs. Don’t worry. Whether you want to edit the logo, change the images, or add new text to the
+                    sliders, it can easily
+                    be done within minutes.
+                </p>
+                <a class="text-white text-[6px] lg:text-sm py-2 px-3 rounded-[20px] border border-[#D35910] hover:bg-[#D35910]"
+                    href="https://starmesrubat.com/shop/">
+                    All products
+                </a>
+            </div>
+        </div>
+        <!-- main section/ -->
+        <!-- main section -->
+        <div class="content hidden justify-between items-center w-full section1 apple">
             <div class="w-[20%] relative group m-auto">
                 <img class="boxImage scale-[1.2] w-[80%] relative group-hover:-translate-x-[40%] -translate-x-[50%] translate-y-[50%] group-hover:translate-y-[50%] group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
                     src="star/Cartoons/8.png" alt="">
@@ -108,7 +149,7 @@
         </div>
         <!-- main section/ -->
         <!-- icons section -->
-        <div>
+        <div class="section1 orange">
             <div class="w-full px-[2.5%]">
                 <div class="flex justify-center items-center max-w-[1200px] m-auto">
                     <div class="border-b border-[#D35910] flex justify-center">
@@ -135,8 +176,37 @@
                 </div>
             </div>
         </div>
+        <!-- icons section/ -->
+        <!-- icons section -->
+        <div class="hidden section1 apple">
+            <div class="w-full px-[2.5%]">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto">
+                    <div class="border-b border-[#D35910] flex justify-center">
+                    <div class="group relative w-20" >
+                    <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                        onclick="changeText('Orange'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('star/Cartoons/8.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]')"
+                        src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                    <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">Orange</h2>
+                    </div>
+                    <div class="group relative w-20">
+                    <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                        onclick="changeText('Apple'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('star/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#94D12B]')" src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
+                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
+                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
+                    <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">Apple</h2>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- icons section/ -->
     </section>
-    <!-- icons section/ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
      <script>
         let fruitImage = document.querySelector(".fruitImage");
@@ -181,6 +251,24 @@
             let fruitText = document.getElementById("fruit-text");
             fruitText.innerText = newText;
         }
+        function sections1() {
+            let sections = document.querySelectorAll(".section1");
+            sections.forEach(function(section) {
+                section.classList.remove('flex');
+                section.classList.add('hidden');
+            });
+        }
+
+        function showSection(sectionClass) {
+            let sections = document.querySelectorAll(`.${sectionClass}`);
+            sections.forEach(function(section) {
+                if (section) {
+                section.classList.remove('hidden');
+                section.classList.add('flex');
+            }
+            });
+        }
+
     </script>
     <!--
         <img class="img" src="img/0.png" alt="">
