--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="border-b border-[#D35910] flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Orange'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('star/Cartoons/8.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]')"
+                                onclick="changeText('Orange'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('STAR/Cartoons/8.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]')"
                                 src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
@@ -165,7 +165,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Apple'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('star/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#94D12B]')" src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
+                                onclick="changeText('Apple'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('STAR/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#94D12B]')" src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -174,7 +174,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Lemon'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('star/Cartoons/6.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#FFFF12]')" src="STAR\منتجات BOOM BOOM\بنكهة الليمون 7.png" alt="">
+                                onclick="changeText('Lemon'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('STAR/Cartoons/6.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#FFFF12]')" src="STAR\منتجات BOOM BOOM\بنكهة الليمون 7.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\منتجات BOOM BOOM\بنكهة الليمون 7.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -183,7 +183,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Mango'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('star/Cartoons/7.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#FAD50B]')" src="STAR\منتجات BOOM BOOM\بنكهة المانجو 5.png" alt="">
+                                onclick="changeText('Mango'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('STAR/Cartoons/7.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#FAD50B]')" src="STAR\منتجات BOOM BOOM\بنكهة المانجو 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\منتجات BOOM BOOM\بنكهة المانجو 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -192,7 +192,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Berry'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('star/Cartoons/4.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#681773]')" src="STAR\منتجات BOOM BOOM\توت اسود 5.png" alt="">
+                                onclick="changeText('Berry'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('STAR/Cartoons/4.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#681773]')" src="STAR\منتجات BOOM BOOM\توت اسود 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\منتجات BOOM BOOM\توت اسود 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -201,7 +201,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Tropical'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('star/Cartoons/4.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#681773]')" src="STAR\منتجات BOOM BOOM\فواكة استوائية 5.png" alt="">
+                                onclick="changeText('Tropical'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('STAR/Cartoons/4.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#681773]')" src="STAR\منتجات BOOM BOOM\فواكة استوائية 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\منتجات BOOM BOOM\فواكة استوائية 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -210,7 +210,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Strawberry'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('star/Cartoons/3.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#EF0E54]')" src="STAR\منتجات BOOM BOOM\نكهة فراولة 5.png" alt="">
+                                onclick="changeText('Strawberry'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('STAR/Cartoons/3.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#EF0E54]')" src="STAR\منتجات BOOM BOOM\نكهة فراولة 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\منتجات BOOM BOOM\نكهة فراولة 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -219,7 +219,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('Fruits'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('star/Cartoons/4.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#A03EA5]')" src="STAR\منتجات BOOM BOOM\نكهة فواكة 5.png" alt="">
+                                onclick="changeText('Fruits'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); boxs('STAR/Cartoons/4.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#A03EA5]')" src="STAR\منتجات BOOM BOOM\نكهة فواكة 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\منتجات BOOM BOOM\نكهة فواكة 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
