--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <!-- icons section -->
         <div class="section1 orange">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll">
                     <div class="border-b border-[#D35910] flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -234,7 +234,7 @@
         <!-- icons section -->
         <div class="hidden section1 apple">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll">
                     <div class="border-b border-[#D35910] flex justify-center">
                     <div class="group relative w-20" >
                     <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
